--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "holyzeppelin"]
 	path = holyzeppelin
 	url = git@github.com:Mimir-Solutions/holyzeppelin.git
+[submodule "authorization-protocol"]
+	path = authorization-protocol
+	url = git@github.com:Mimir-Solutions/authorization-protocol.git
