--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "rena-exchange"]
 	path = rena-exchange
 	url = git@github.com:Mimir-Solutions/rena-exchange.git
+[submodule "smart-contract-security-standards"]
+	path = smart-contract-security-standards
+	url = git@github.com:Mimir-Solutions/smart-contract-security-standards.git
