--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "holyzeppelin"]
 	path = holyzeppelin
 	url = git@github.com:Mimir-Solutions/holyzeppelin.git
-[submodule "janus-token"]
-	path = janus-token
-	url = git@github.com:Mimir-Solutions/janus-token.git
 [submodule "00-snippets/eris-token"]
 	path = 00-snippets/eris-token
 	url = git@github.com:Mimir-Solutions/eris-token.git
@@ -28,3 +25,6 @@
 [submodule "smart-contract-security-standards"]
 	path = smart-contract-security-standards
 	url = git@github.com:Mimir-Solutions/smart-contract-security-standards.git
+[submodule "authorization-platform"]
+	path = authorization-platform
+	url = git@github.com:Mimir-Solutions/authorization-platform.git
