Added Olympus as submodule
Also updated CONTRIBUTING.adoc

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "authorization-platform"]
 	path = authorization-platform
 	url = git@github.com:Mimir-Solutions/authorization-platform.git
+[submodule "olympus"]
+	path = olympus
+	url = git@github.com:Mimir-Solutions/olympus.git
